styles.css
html {
  height: 100%;
  background-color: #28293e;
}

* {
  margin: 0;
  padding: 0;
  font-family: "Open Sans";
}

body {
  min-height: 100%;
  max-width: 100%;
}

.container {
  max-width: 80%;
  margin: auto;
  display: flex;
  flex-direction: column;
}

/* Header & navBar styles */
.header {
  width: 100%;
  margin-bottom: 50px;
  background-position: center;
  background-size: cover;
  position: relative;
}
nav {
  display: flex;
  padding-top: 2%;
  justify-content: space-between;
  align-items: center;
}
.contact {
  margin-left: 15%;
  border: 1px solid rgb(188, 186, 186, 0.5);
  border-radius: 5px;
  transition: 0.5s;
}
.contact:hover {
  background: #ef6d58;
  border: 1px solid #ef6d58;
}
.nav-links {
  flex: 1;
  text-align: right;
}
.nav-links ul li {
  list-style: none;
  display: inline-block;
  padding: 8px 22px;
  position: relative;
}
a {
  color: white;
  text-decoration: none;
  font-size: 13px;
}
.nav-links ul li::after {
  content: "";
  width: 0%;
  height: 2px;
  background: #ef6d58;
  display: block;
  margin: auto;
  transition: 0.5s;
}
.nav-links ul li:hover::after {
  width: 100%;
}

/* Main text styles */
.mainText h5 {
  font-size: 18px;
  letter-spacing: 3px;
  color: #ef6d58;
}
.mainText h2 {
  color: white;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 50px;
}
.mainText {
  font-size: 16px;
  color: rgb(188, 186, 186);
}
.hide {
  display: block;
  position: absolute;
  margin-left: 10px;
  z-index: -1;
}
.star {
  display: block;
  position: absolute;
  margin-left: 200px;
  transition: all 2s linear;
  z-index: -1;
}
.home {
  margin-top: 80px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 110px;
  align-items: center;
}
.commentSection {
  margin-top: 80px;
  display: flex;
  justify-items: flex-start;
}
.faceAndBackground {
  display: flex;
}
.faceAndBackground img {
  align-self: center;
  width: 50px;
  height: 50px;
}
.comment {
  margin-left: 20px;
}
.company {
  color: white !important;
}

/* Button styles */
.btn1 {
  display: inline-block;
  background: #ef6d58;
  border: 1px solid #ef6d58;
  color: white;
  padding: 10px 16px;
  border-radius: 10px;
  margin-top: 40px;
  margin-right: 10px;
  transition: 0.5s;
  cursor: pointer;
}
.btn1:hover {
  border: 1px solid black;
  color: black;
}
.btn2 {
  display: inline-block;
  background: none;
  border: none;
  border-radius: 10px;
  color: white;
  padding: 10px 16px;
  margin-top: 40px;
  margin-right: 10px;
  transition: 0.5s;
  cursor: pointer;
}
.btn2:hover {
  background-color: rgba(239, 109, 88, 0.5);
  border-radius: 10px;
}

/* Image styles */
.imgContainer img {
  max-width: 110%;
}
.img {
  position: relative;
  top: 0;
  left: 0;
}

/* Footer Styles */
.footer {
  background-color: #fdf0e9;
  margin-top: 30px;
  text-align: center;
  padding: 30px 0;
}
.icons {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-left: 10%;
  margin-right: 10%;
}
.icons img {
  width: 10%;
}

/* Styles for responsive site */
nav .fa {
  display: none;
}
/* Media query for small screen devices */
@media (max-width: 800px) {
  /* Header */
  .header {
    width: 100%;
    margin-top: 20px;
    background-position: center;
    background-size: cover;
    position: relative;
  }
  /* Main text & image */
  .home {
    display: flex;
    flex-direction: column-reverse;
    gap: 30px;
    margin-top: 40px;
  }
  .imgContainer {
    max-width: 70%;
    margin-top: 10px;
  }
  .imgContainer img {
    max-width: 100%;
  }
  .hide {
    display: block;
    position: absolute;
    margin-left: 10px;
    z-index: -1;
  }
  .star {
    display: block;
    position: absolute;
    margin-left: 175px;
    transition: all 2s linear;
    z-index: -1;
  }
  /* Footer */
  .icons img {
    width: 15%;
  }

  /* Hidding navBar */
  .nav-links ul li {
    display: block;
  }
  .nav-links {
    position: fixed;
    background: rgba(239, 109, 88, 0.9);
    height: 100vh;
    width: 200px;
    top: 0;
    right: -200px;
    text-align: left;
    z-index: 2;
    transition: 1s;
  }
  nav .fa {
    display: block;
    color: white;
    margin: 10px;
    font-size: 22px;
    cursor: pointer;
  }
  .nav-links ul {
    padding: 30px;
  }
  .contact {
    margin-left: 0px;
    border: 1px solid rgb(188, 186, 186, 1);
    border-radius: 5px;
  }
  a {
    color: white;
    text-decoration: none;
    font-size: 15px;
  }
}

